--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "developer":
     {
         "name": "CeroKashy",
-        "url": ""
+        "url": "https://github.com/CesarEduL/OperaGX-Sonic-Frontiers-Mod/tree/main"
     },
         "icons":
     {
